# sffs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  issues
protos/: Cargo.toml  build.rs
protos/src/: dfs.rs  dfs_grpc.rs  lib.rs
src/: client.rs  common.rs  dfsserver.rs  error.rs  filter.rs  lib.rs  op_dir.rs  protos.rs  server.rs  sffsserver.rs
src/protos/: .gitignore  dfs.proto  sffs.proto
test/: script
