[package]
name = "rpctest"
version = "0.1.0"
authors = ["robertking <superobertking@icloud.com>"]
edition = "2018"

[dependencies]
futures = "0.1"
grpcio = "0.4"
protobuf = "2"
nix = "0.14"

[build-dependencies]
protoc-grpcio = "0.3.1"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"
