[package]
name = "sffs"
version = "0.1.0"
description = "Simple Flat File Service/System"
authors = ["robertking <superobertking@icloud.com>", "Dappur <dappur@126.com>"]
edition = "2018"

[dependencies]
futures = "0.1"
grpcio = "0.4"
protobuf = "2"
nix = "0.14"
chrono = "0.4"
jemallocator = { version = "0.3.0", optional = true }

[features]
jemalloc = ["jemallocator"]

[build-dependencies]
protoc-grpcio = "0.3.1"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "single"
path = "src/op_dir.rs"
